# Scara_CNC

./: .gitignore  Dockerfile  README.md  demo_joint_mode.sh  docker-compose.yml  run_demo.sh  test_ws.py
backend/: main.py
docker/: entrypoint.hw.sh  entrypoint.sh  (+1 more)
install/scara_sim/share/scara_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scara_sim/share/scara_sim/models/detail/: model.config
ros2_ws/src/scara_cnc/: CMakeLists.txt
ros2_ws/src/scara_cnc/config/: controllers.yaml  joint_names_urdf_Scara.yaml  scara_rsp.yaml
ros2_ws/src/scara_cnc/install/: local_setup.sh  setup.ps1  setup.sh
ros2_ws/src/scara_cnc/install/scara_cnc/share/ament_index/resource_index/package_run_dependencies/: scara_cnc
ros2_ws/src/scara_cnc/install/scara_cnc/share/ament_index/resource_index/parent_prefix_path/: scara_cnc
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.zsh
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/cmake/: scara_cncConfig-version.cmake  scara_cncConfig.cmake
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/config/: controllers.yaml  scara_cnc.rviz
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/launch/: display_scara.launch.py
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/meshes/: hand1.STL  hand3.STL
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/urdf/: urdf_Scara.csv
ros2_ws/src/scara_cnc/install/scara_cnc/share/scara_cnc/urdf/install/: COLCON_IGNORE  _local_setup_util_ps1.py  local_setup.bash  local_setup.ps1  local_setup.zsh  setup.ps1  setup.sh
ros2_ws/src/scara_cnc/launch/: display_scara.launch.py  sim_scara.launch.py
ros2_ws/src/scara_cnc/log/: latest_build
ros2_ws/src/scara_cnc/meshes/: base_link.STL
ros2_ws/src/scara_cnc/scara_cnc/: draw_circle.py
ros2_ws/src/scara_cnc/urdf/: cnc.urdf  scara.urdf
ros2_ws/src/scara_cnc/urdf/install/: local_setup.sh  setup.sh
ros2_ws/src/scara_cnc/urdf/log/: latest_build
ros2_ws/src/scara_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/scara_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  scara.srdf
ros2_ws/src/scara_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
(+275 files in other folders)
